[gd_scene format=3 uid="uid://cjb7oprk64uo3"]

[ext_resource type="Script" uid="uid://co5qrwa7jymom" path="res://door.gd" id="1_fahql"]
[ext_resource type="FontFile" uid="uid://ddqis61kyd6jj" path="res://Tiny5-Regular.ttf" id="3_a43ba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0f350"]
size = Vector2(71, 151)

[node name="Door" type="Node2D" unique_id=1393553521]
script = ExtResource("1_fahql")
target_door = "RightDoor"

[node name="Area2D" type="Area2D" parent="." unique_id=1021341559]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=572206204]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_0f350")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=445143884]

[node name="InteractionPrompt" type="Label" parent="CanvasLayer" unique_id=1364768700]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_a43ba")
text = "Space to interact "

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
